pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
    env: dev
spec:
  containers:
    - image: mysql
      name: mysql
